--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -2,13 +2,12 @@ import init.qcom.usb.rc
 
 on early-init
     chmod 0644 /proc/cmdline
-
+    mount debugfs debugfs /sys/kernel/debug
     # Use lz4 compression for ZRAM
     write /sys/block/zram0/comp_algorithm lz4
 
 on init
     # Support legacy paths
-    symlink /sdcard /mnt/sdcard
     symlink /sdcard /storage/sdcard0
 
     export LD_SHIM_LIBS "/system/lib/hw/camera.msm7x30.so|libshim_native.so:/system/lib/libril.so|libshim_ril.so:/system/lib/hw/sensors.ancora.so|libshim_native.so"
@@ -148,6 +147,9 @@ on boot
 
     # Increase swappiness for zram
     write /proc/sys/vm/swappiness 80
+
+    # increase read-ahead value to 256 kb
+    write /sys/block/mmcblk0/queue/read_ahead_kb 256
     
     # Adaptive LMK
     write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 1
@@ -209,42 +211,13 @@ service wpa_supplicant /system/bin/wpa_supplicant \
     class main
     socket wpa_wlan0 dgram 660 wifi wifi
     disabled
-    oneshot
-
-service dhcpcd_wlan0 /system/bin/dhcpcd -ABKLG
-    class late_start
-    disabled
-    oneshot
-
-service dhcpcd_bt-pan /system/bin/dhcpcd -BKLG
-    class late_start
-    disabled
-    oneshot
-
-service dhcpcd_eth0 /system/bin/dhcpcd -aABDKL
-    class late_start
-    disabled
-    oneshot
-
-service iprenew_wlan0 /system/bin/dhcpcd -n
-    class late_start
-    disabled
-    oneshot
-
-service iprenew_bt-pan /system/bin/dhcpcd -n
-    class late_start
-    disabled
-    oneshot
-
-service iprenew_eth0 /system/bin/dhcpcd -n
-    class late_start
-    disabled
+    group system wakelock
     oneshot
 
 service rmt_storage /system/bin/rmt_storage
     class core
     user root
-    group system
+    group system wakelock
 
 service get_macaddrs /system/bin/get_macaddrs
     class main
@@ -252,7 +225,17 @@ service get_macaddrs /system/bin/get_macaddrs
     oneshot
     disabled
 
-on property:dev.bootcomplete=1
+service ril-daemon /system/bin/rild
+    oneshot
+    class core
+    socket rild stream 660 root radio
+    socket sap_uim_socket1 stream 660 bluetooth bluetooth
+    socket rild-debug stream 660 radio system
+    user root
+    group radio cache inet misc audio log
+    group radio cache inet misc audio log readproc wakelock
+
+on property:sys.boot_completed=1
     setprop sys.io.scheduler bfq
 
 on property:init.svc.bootanim=running
@@ -265,6 +248,3 @@ on property:ril.bt_macaddr=* && ril.wifi_macaddr=*
     chmod 0666 /data/.mac.info
     chmod 0666 /data/.bt.info
     chown bluetooth net_bt_stack /data/.bt.info
-
-on property:init.svc.wpa_supplicant=stopped
-    stop dhcpcd
