--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -231,6 +231,9 @@ service ril-daemon /system/bin/rild
 
 on property:sys.boot_completed=1
     setprop sys.io.scheduler bfq
+    chmod 0666 /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
+    
 
 on property:init.svc.bootanim=running
     # Clear splash screen (blank and unblank)
